--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://telary.io"
 collections:
   posts:
     output: true
-permalink: /:categories/:year/:month/:day/:title.html
+permalink: /:title
 
 # GitHub Pages configuration
 github: [metadata]
