Adding temporary texture

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Telary - Data made Agile
-description: Let's build your data platform
+title: Telary - Data Platform Open Source pour Startups et PME
+description: Telary propose une data platform clé en main, 100% open source, déployée en 24h, pour aider les startups et PME à exploiter pleinement leurs données.
 baseurl: ""
 url: "https://telary.io"
 permalink: /:title/
