--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Telary - Data Platform Open Source pour Startups et PME
+title: Telary - Your data. Ready for AI.
 description: Telary propose une data platform clé en main, 100% open source, déployée en 24h, pour aider les startups et PME à exploiter pleinement leurs données.
 baseurl: ""
 url: "https://telary.io"
